[gd_scene load_steps=4 format=2]

[ext_resource path="res://characters/Follower.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/FollowerAlly.gd" type="Script" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 3, 0.5 )

[node name="FollowerAlly" instance=ExtResource( 1 )]
script = ExtResource( 2 )
distance_to_keep = 24
max_distance = 96
behavior = 2

[node name="AnimatedSprite" parent="." index="0"]
playing = true

[node name="HitboxPivot" type="Position2D" parent="." index="5"]

[node name="MeleeHitbox" type="Area2D" parent="HitboxPivot" index="0"]
collision_layer = 8
collision_mask = 8

[node name="HitboxCollision" type="CollisionShape2D" parent="HitboxPivot/MeleeHitbox" index="0"]
position = Vector2( 0, 8.5 )
shape = SubResource( 1 )
disabled = true

[node name="LineOfSight" type="RayCast2D" parent="." index="6"]
enabled = true
cast_to = Vector2( 64, 0 )
collision_mask = 1024

[connection signal="animation_finished" from="AnimatedSprite/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
